Fixed background not being visible when no cards are displayed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,7 @@ footer {
   padding: 10px;
   margin: 0 auto;
 }
+
+.custCol {
+  height:500px;
+}
